@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>currentDocument</key>
-	<string>ruby/irc/unit.rb</string>
+	<string>ruby/view/log.rb</string>
 	<key>documents</key>
 	<array>
 		<dict>
@@ -65,46 +65,44 @@
 				<integer>290</integer>
 			</dict>
 		</dict>
-		<key>ruby/irc/unit.rb</key>
+		<key>ruby/view/log.rb</key>
 		<dict>
 			<key>caret</key>
 			<dict>
 				<key>column</key>
-				<integer>42</integer>
+				<integer>0</integer>
 				<key>line</key>
-				<integer>164</integer>
+				<integer>62</integer>
 			</dict>
 			<key>columnSelection</key>
 			<false/>
 			<key>firstVisibleColumn</key>
 			<integer>0</integer>
 			<key>firstVisibleLine</key>
-			<integer>143</integer>
+			<integer>38</integer>
 			<key>selectFrom</key>
 			<dict>
 				<key>column</key>
-				<integer>32</integer>
+				<integer>0</integer>
 				<key>line</key>
-				<integer>164</integer>
+				<integer>61</integer>
 			</dict>
 			<key>selectTo</key>
 			<dict>
 				<key>column</key>
-				<integer>42</integer>
+				<integer>0</integer>
 				<key>line</key>
-				<integer>164</integer>
+				<integer>62</integer>
 			</dict>
 		</dict>
 	</dict>
 	<key>openDocuments</key>
 	<array>
-		<string>objc/rb_main.rb</string>
-		<string>ruby/irc/unit.rb</string>
-		<string>ruby/controller/menucontroller.rb</string>
+		<string>ruby/view/log.rb</string>
 	</array>
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{329, 62}, {798, 816}}</string>
+	<string>{{518, 71}, {714, 807}}</string>
 </dict>
 </plist>
