@@ -1,3 +1,8 @@
+2008-01-03  Satoshi Nakagawa <artension@gmail.com>
+
+	Refactoring NumberFormat.
+	Based on a patch from Stefan Rusterholz.
+
 2007-12-29  Satoshi Nakagawa <artension@gmail.com>
 
 	Fixed a bug, autoop masks should ignore case.
